<resources>
    <string name="app_name">MemorizationApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>programmatically
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">메인</string>
    <string name="menu_folder">폴더</string>
    <string name="menu_folder_create">폴더 생성</string>
    <string name="menu_folder_update">폴더 수정</string>
    <string name="menu_file">카드 묶음</string>
    <string name="menu_card_management">카드 관리</string>
    <string name="menu_memorize_option">암기 설정</string>
    <string name="menu_memorization_test">암기 테스트</string>
    <string name="menu_file_create">카드 묶음 생성</string>
    <string name="menu_file_update">카드 묶음 수정</string>
    <string name="menu_card_list">카드</string>
    <string name="menu_card_create">카드 생성</string>
    <string name="menu_card_update">카드 수정</string>\

    <string name="dialog_title">알림</string>
    <string name="dialog_test_result">테스트 결과</string>
    <string name="dialog_error_title">알림</string>
    <string name="dialog_folder_create">폴더 이름을 입력하세요.</string>
    <string name="dialog_file_create">카드 이름을 입력하세요.</string>
    <string name="dialog_folder_delete">폴더를 삭제하시겠습니까?.</string>
    <string name="dialog_delete">삭제하시겠습니까?.</string>
    <string name="dialog_memorization_test_end">테스트를 종료하시겠습니까?</string>
    <string name="dialog_folder_delete_error">폴더 삭제중 오류가 발생했습니다.</string>
    <string name="dialog_folder_create_error">폴더 저장중 오류가 발생했습니다.</string>
    <string name="dialog_folder_update_error">폴더 수정중 오류가 발생했습니다.</string>
    <string name="dialog_folder_not_exist">폴더가 존재하지 않거나 폴더가 아닙니다.</string>
    <string name="dialog_folder_exist">이미 폴더가 존재합니다.</string>
    <string name="dialog_card_question">카드 문제를 입력하세요.</string>
    <string name="dialog_card_answer">카드 정답을 입력하세요.</string>
    <string name="dialog_card_delete">카드를 삭제하시겠습니까?</string>
    <string name="dialog_card_insert_complete">카드가 추가되었습니다.</string>

    <string name="custom_dialog_folder_select_title">폴더 선택</string>
    <string name="custom_dialog_card_type_select_title">카드 분류 선택</string>
    <string name="custom_dialog_card_sequence_select_title">카드 순서 선택</string>

    <string name="message_create_folder">폴더 이름을 입력하세요.</string>
    <string name="message_card_question">문제를 입력하세요.</string>
    <string name="message_card_answer">정답을 입력하세요.</string>

    <string name="common_back">뒤로</string>
    <string name="common_save">저장</string>
    <string name="common_basics">기본</string>
    <string name="common_all">전체</string>
    <string name="common_progress">진행도</string>
    <string name="common_random">무작위</string>
    <string name="common_memorizing">암기중</string>
    <string name="common_memorized">암기 완료</string>
    <string name="common_memorize_cards">카드 암기</string>
    <string name="common_test_start">테스트 시작</string>
    <string name="common_confirm">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_go_main">홈으로 가기</string>
    <string name="common_stay">돌아보기</string>
    <string name="common_image_error">사진 오류</string>
    <string name="common_folder_name">폴더 이름</string>
    <string name="common_folder_create">폴더 생성</string>
    <string name="common_folder_choice">폴더 선택</string>
    <string name="common_file_create">카드 생성</string>
    <string name="common_file_name">카드 이름</string>
    <string name="common_card_type">카드 종류</string>
    <string name="common_card_sequence">카드 순서</string>
    <string name="common_update">수정</string>
    <string name="common_delete">삭제</string>
    <string name="common_delete_only_folder">폴더 해제</string>
    <string name="common_card_question">카드 문제</string>
    <string name="common_card_answer">카드 정답</string>
</resources>