<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.memorizationapp.ui.main.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_folder"
        android:name="com.example.memorizationapp.ui.folder.FolderFragment"
        android:label="@string/menu_folder"
        tools:layout="@layout/fragment_folder" />

    <fragment
        android:id="@+id/nav_file"
        android:name="com.example.memorizationapp.ui.file.FileFragment"
        android:label="@string/menu_file"
        tools:layout="@layout/fragment_file" />

    <fragment
        android:id="@+id/nav_card_list"
        android:name="com.example.memorizationapp.ui.cardList.CardListFragment"
        android:label="@string/menu_card_list"
        tools:layout="@layout/fragment_file" />
</navigation>