<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.file.FileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_file"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_file"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/common_image_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_basics_margin"
            android:layout_marginStart="@dimen/tv_basics_margin"
            android:text="@string/common_file_name"
            android:textSize="@dimen/tv_basics_textSize"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/fileName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/et_basics_margin"
            android:layout_weight="3"
            android:hint="@string/dialog_file_create"
            android:inputType="textPersonName"
            android:textSize="@dimen/et_basics_textSize"
            tools:ignore="HardcodedText"
            android:importantForAutofill="no" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>