<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.memorizeOption.MemorizeOptionFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/basics_base_level4"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_folder_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/basics_base_level1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_folder_choice_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/common_folder_choice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_file_choice_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/common_all"
                    app:layout_constraintEnd_toEndOf="@id/ll_folder_choice"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/basics_base_level4"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_card_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/basics_base_level1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_card_type_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/common_card_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_card_type_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/common_memorizing"
                    app:layout_constraintEnd_toEndOf="@id/ll_card_type"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/basics_base_level4"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_card_sequence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/basics_base_level1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_card_sequence_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/common_card_sequence"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_card_sequence_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/common_random"
                    app:layout_constraintEnd_toEndOf="@id/ll_card_sequence"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_test_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/common_test_start"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>