<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_card_type_select_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:text="@string/custom_dialog_card_type_select_title"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:background="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/basics_base_level4"
        app:layout_constraintTop_toBottomOf="@id/dialog_card_type_select_title">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/fl_card_type_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/basics_base_level4"
                android:layout_margin="10dp"
                android:padding="2dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/common_all"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:background="@color/white"
                    android:textColor="@color/basics_textColor"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/fl_card_type_memorizing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/basics_base_level4"
                android:layout_margin="10dp"
                android:padding="2dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/common_memorizing"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:background="@color/basics_base_level2"
                    android:textColor="@color/basics_textColor"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/fl_card_type_memorized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/basics_base_level4"
                android:layout_margin="10dp"
                android:padding="2dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/common_memorized"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/basics_textColor"
                    android:background="@color/white"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>